CSS, corrected spacing of races and elements, added background repeat

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -47,11 +47,11 @@ p#p01-time {
   color: #1b1b1f;
 }
 
-p#p02 {
-  font-size: 1.2em;
-  line-height: 115%;
-  color: #38b4c1;
-}
+// p#p02 {
+//   font-size: 1.2em;
+//   line-height: 115%;
+//   color: #38b4c1;
+// }
 
 p#p03 {
   font-size: 2.5em;
