--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -86,6 +86,7 @@ body.products {
 #race-info {
   text-align: center;
   margin-top: 100px;
+  margin-bottom: 60px;
   // background-color: white;
 }
 
@@ -106,15 +107,31 @@ body.products {
   background-color: $black-tint1;
   height: 540px;
   width: 360px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 30px;
   padding: 10px;
   display: inline-block;
   float: none;
   vertical-align: top;
 }
 
+// @media (max-width: 1024px) {
+//     #races-block {
+//     width: 30%;
+//     height: 100%;
+//     margin-top: 10px;
+//     margin-bottom: 20px;
+//     margin-left: 5px;
+//     margin-right: 5px;
+//   }
+
+  // p#p02 {
+  // font-size: 1em;
+  // line-height: 120%;
+  // color: $blue-main;
+  // }
+// }
 
 @media (max-width: 414px) {
   #races-block {
@@ -145,7 +162,7 @@ body.products {
 //   color: white;
 // }
 
-#races-block h4{
+#races-block h4 {
   color: $white-tint;
   margin: 0 auto;
   margin-top: 10px;
@@ -154,7 +171,7 @@ body.products {
   word-spacing: 0px;
   letter-spacing: 1px;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 @media (max-width: 414px) {
@@ -226,7 +243,7 @@ body.products {
   border: 4px double white;
   background: none; 
   padding: 6px 10px;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
 }
 
 .stripe-button-el {
@@ -271,12 +288,17 @@ body.products {
 }
 
 #review-btn {
-  margin-top: 46px;
+  margin-top: 38px;
+  height: 48px;
 }
 
 #view-file {
   // margin-top: 10px;
   margin-bottom: 30px;
+}
+
+#info-btn {
+  height: 20px;
 }
 // * end races page buttons *//
 
@@ -338,6 +360,11 @@ hr.style5 {
 
 #race-info hr {
   margin-top: 05px;
+  margin-bottom: 10px;
+}
+
+#races-block hr {
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 // end horizontal rules and register button //
