--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -46,11 +46,11 @@ p#p01-white {
   color: white;
 }
 
-p#p02 {
-  font-size: 1.2em;
-  line-height: 120%;
-  color: $blue-main;
-}
+// p#p02 {
+//   font-size: 1.2em;
+//   line-height: 120%;
+//   color: $blue-main;
+// }
 
 p#p03 {
   font-size: 2.5em;
@@ -216,16 +216,17 @@ input:-webkit-autofill {
 //   vertical-align: top;
 // }
 
-#my-center-block h4 {
-  color: $white-tint;
-  margin: 0 auto;
-  margin-top: 20px;
-  line-height: 1;
-  word-spacing: 0px;
-  letter-spacing: 2px;
-  font-weight: 700;
-  font-size: 4em;
-}
+// #my-center-block h4 {
+//   color: $white-tint;
+//   margin: 0 auto;
+//   margin-top: 20px;
+//   margin-bottom: 20px;
+//   line-height: 1;
+//   word-spacing: 0px;
+//   letter-spacing: 2px;
+//   font-weight: 700;
+//   font-size: 4em;
+// }
 
 // #my-inner-block {
 //   margin-top: 90px;
